set(ProjectName "NFKernelPlugin")
file(GLOB NFKernelPlugin_NFKernelModule_Cpp ./NFKernelModule/*.cpp)
file(GLOB NFKernelPlugin_NFKernelModule_Hpp ./NFKernelModule/*.h)
file(GLOB NFKernelPlugin_NFSceneModule_Cpp ./NFSceneModule/*.cpp)
file(GLOB NFKernelPlugin_NFSceneModule_Hpp ./NFSceneModule/*.h)
file(GLOB NFKernelPlugin_ROOT_Cpp *.cpp)
file(GLOB NFKernelPlugin_ROOT_Hpp *.h)

source_group("NFKernelModule" FILES ${NFKernelPlugin_NFKernelModule_Cpp})
source_group("NFSceneModule" FILES ${NFKernelPlugin_NFSceneModule_Cpp})
source_group("NFKernelModule" FILES ${NFKernelPlugin_NFKernelModule_Hpp})
source_group("NFSceneModule" FILES ${NFKernelPlugin_NFSceneModule_Hpp})

add_library(NFKernelPlugin SHARED
	${NFKernelPlugin_NFKernelModule_Cpp} 
	${NFKernelPlugin_NFSceneModule_Cpp} 
	${NFKernelPlugin_NFKernelModule_Hpp} 
	${NFKernelPlugin_NFSceneModule_Hpp}
	${NFKernelPlugin_ROOT_Cpp}
	${NFKernelPlugin_ROOT_Hpp})

if(UNIX)
	add_dependencies(NFKernelPlugin NFCore NFConfigPlugin)
	if (CMAKE_BUILD_TYPE MATCHES "Release")
		target_link_libraries(NFKernelPlugin libtheron.a NFCore)
	else()
		target_link_libraries(NFKernelPlugin libtherond.a NFCore)
	endif()
	
	if(CMAKE_BUILD_TYPE STREQUAL "Release")		
		add_post_cmd_linux(${ProjectName} "NFLoginServer" "so" "")
		add_post_cmd_linux(${ProjectName} "NFWorldServer" "so" "")
		add_post_cmd_linux(${ProjectName} "NFMasterServer" "so" "")
		add_post_cmd_linux(${ProjectName} "NFProxyServer1" "so" "")
		add_post_cmd_linux(${ProjectName} "NFGameServer1" "so" "")
		add_post_cmd_linux(${ProjectName} "Tutorial1" "so" "")
		add_post_cmd_linux(${ProjectName} "Tutorial2" "so" "")
		add_post_cmd_linux(${ProjectName} "Tutorial3" "so" "")
		add_post_cmd_linux(${ProjectName} "Tutorial4" "so" "")
		add_post_cmd_linux(${ProjectName} "Tutorial5" "so" "")
		add_post_cmd_linux(${ProjectName} "Tutorial6" "so" "")
		add_post_cmd_linux(${ProjectName} "Tutorial7" "so" "")
	else()
		add_post_cmd_linux(${ProjectName} "NFLoginServer" "so" "_d")
		add_post_cmd_linux(${ProjectName} "NFWorldServer" "so" "_d")
		add_post_cmd_linux(${ProjectName} "NFMasterServer" "so" "_d")
		add_post_cmd_linux(${ProjectName} "NFProxyServer1" "so" "_d")
		add_post_cmd_linux(${ProjectName} "NFGameServer1" "so" "_d")
		add_post_cmd_linux(${ProjectName} "Tutorial1" "so" "_d")
		add_post_cmd_linux(${ProjectName} "Tutorial2" "so" "_d")
		add_post_cmd_linux(${ProjectName} "Tutorial3" "so" "_d")
		add_post_cmd_linux(${ProjectName} "Tutorial4" "so" "_d")
		add_post_cmd_linux(${ProjectName} "Tutorial5" "so" "_d")
		add_post_cmd_linux(${ProjectName} "Tutorial6" "so" "_d")
		add_post_cmd_linux(${ProjectName} "Tutorial7" "so" "_d")
	endif()
else()
	add_dependencies(NFKernelPlugin NFCore NFConfigPlugin)
	target_link_libraries(NFKernelPlugin anet_win64 libprotobuf lua Theron)
	
	if(CMAKE_BUILD_TYPE STREQUAL "Release")		
		add_post_cmd_win(${ProjectName} "NFLoginServer" "dll" "")
		add_post_cmd_win(${ProjectName} "NFWorldServer" "dll" "")
		add_post_cmd_win(${ProjectName} "NFMasterServer" "dll" "")
		add_post_cmd_win(${ProjectName} "NFProxyServer1" "dll" "")
		add_post_cmd_win(${ProjectName} "NFGameServer1" "dll" "")
		add_post_cmd_win(${ProjectName} "Tutorial1" "dll" "")
		add_post_cmd_win(${ProjectName} "Tutorial2" "dll" "")
		add_post_cmd_win(${ProjectName} "Tutorial3" "dll" "")
		add_post_cmd_win(${ProjectName} "Tutorial4" "dll" "")
		add_post_cmd_win(${ProjectName} "Tutorial5" "dll" "")
		add_post_cmd_win(${ProjectName} "Tutorial6" "dll" "")
		add_post_cmd_win(${ProjectName} "Tutorial7" "dll" "")
	else()
		add_post_cmd_win(${ProjectName} "NFLoginServer" "dll" "_d")
		add_post_cmd_win(${ProjectName} "NFWorldServer" "dll" "_d")
		add_post_cmd_win(${ProjectName} "NFMasterServer" "dll" "_d")
		add_post_cmd_win(${ProjectName} "NFProxyServer1" "dll" "_d")
		add_post_cmd_win(${ProjectName} "NFGameServer1" "dll" "_d")
		add_post_cmd_win(${ProjectName} "Tutorial1" "dll" "_d")
		add_post_cmd_win(${ProjectName} "Tutorial2" "dll" "_d")
		add_post_cmd_win(${ProjectName} "Tutorial3" "dll" "_d")
		add_post_cmd_win(${ProjectName} "Tutorial4" "dll" "_d")
		add_post_cmd_win(${ProjectName} "Tutorial5" "dll" "_d")
		add_post_cmd_win(${ProjectName} "Tutorial6" "dll" "_d")
		add_post_cmd_win(${ProjectName} "Tutorial7" "dll" "_d")
	endif()
endif()
set_target_properties( NFKernelPlugin PROPERTIES OUTPUT_NAME_DEBUG "NFKernelPlugin_d")
set_target_properties( NFKernelPlugin PROPERTIES
	FOLDER "NFSDK"
	ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/_Out/Comm/
	RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/_Out/Comm/
	LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/_Out/Comm/ )

